// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`visual snapshots > admin StatsCard – basic 1`] = `
<div
  class="rounded-lg border bg-card p-6 shadow-sm transition-shadow hover:shadow-md focus-within:outline-none focus-within:ring-2 focus-within:ring-ring focus-within:ring-offset-2 focus-within:ring-offset-card"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="space-y-1"
    >
      <p
        class="text-sm font-medium text-muted-foreground"
      >
        Total Users
      </p>
      <p
        class="text-2xl font-bold text-foreground"
      >
        42
      </p>
      <p
        class="text-xs text-muted-foreground"
      >
        Registered users
      </p>
    </div>
    <div
      class="rounded-full bg-primary/10 p-3"
    >
      <svg
        class="lucide lucide-users h-6 w-6 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <path
          d="M16 3.13a4 4 0 0 1 0 7.75"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`visual snapshots > admin StatsCard – with positive trend 1`] = `
<div
  class="rounded-lg border bg-card p-6 shadow-sm transition-shadow hover:shadow-md focus-within:outline-none focus-within:ring-2 focus-within:ring-ring focus-within:ring-offset-2 focus-within:ring-offset-card"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="space-y-1"
    >
      <p
        class="text-sm font-medium text-muted-foreground"
      >
        Active Classes
      </p>
      <p
        class="text-2xl font-bold text-foreground"
      >
        12
      </p>
      <p
        class="text-xs text-muted-foreground"
      >
        Total classes
      </p>
      <p
        class="text-xs font-medium text-success"
      >
        +
        8
        %
         
        <span
          class="text-muted-foreground"
        >
          vs last month
        </span>
      </p>
    </div>
    <div
      class="rounded-full bg-primary/10 p-3"
    >
      <svg
        class="lucide lucide-users h-6 w-6 text-primary"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <path
          d="M16 3.13a4 4 0 0 1 0 7.75"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`visual snapshots > admin stats grid wrapper className 1`] = `"grid gap-4 md:grid-cols-2 lg:grid-cols-4 rounded-xl p-1 shadow-md sm:shadow-lg lg:shadow-xl border border-transparent sm:border-accent/40 lg:border-accent"`;

exports[`visual snapshots > light-mode visual token contract 1`] = `
[
  "primary: 160 50% 33%",
  "muted-foreground: 160 10% 38%",
  "accent: 175 60% 32%",
  "success: 142 70% 30%",
  "destructive: 0 84% 45%",
  "input: 170 20% 50%",
  "ring: 160 50% 35%",
  "sidebar-accent: 170 30% 92%",
  "sidebar-accent-foreground: 160 50% 22%",
]
`;

exports[`visual snapshots > sidebar link – RTL Arabic state 1`] = `
<div
  class="font-sans"
  dir="rtl"
  lang="ar"
>
  <a
    class="relative flex items-center gap-3 rounded-lg px-3 py-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md bg-sidebar-accent text-sidebar-accent-foreground font-medium"
    href="/sample"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-house h-5 w-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
      />
      <path
        d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
      />
    </svg>
    <span
      class="truncate flex-1"
    >
      Sample link
    </span>
  </a>
</div>
`;

exports[`visual snapshots > sidebar link – active state 1`] = `
<a
  class="relative flex items-center gap-3 rounded-lg px-3 py-2 transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md bg-sidebar-accent text-sidebar-accent-foreground font-medium"
  href="/sample"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-5 w-5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
  <span
    class="truncate flex-1"
  >
    Sample link
  </span>
</a>
`;

exports[`visual snapshots > sidebar link – collapsed state 1`] = `
<a
  class="relative flex items-center gap-3 rounded-lg py-2 text-muted-foreground transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md justify-center px-2"
  href="/sample"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-5 w-5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
</a>
`;

exports[`visual snapshots > sidebar link – default state 1`] = `
<a
  class="relative flex items-center gap-3 rounded-lg px-3 py-2 text-muted-foreground transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-card sm:shadow-sm hover:shadow-md"
  href="/sample"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-5 w-5 shrink-0"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
  <span
    class="truncate flex-1"
  >
    Sample link
  </span>
</a>
`;
